@@ -16,11 +16,11 @@ my $prereqs  = {
     'version' => '0.88'
   },
   'requires' => {
-    'CPAN::Meta' => '2.142690',
+    'CPAN::Meta' => '2.150005',
     'CPAN::Uploader' => '0.103004',
     'Class::Null' => '2.101420',
     'Class::Usul' => 'v0.63.0',
-    'Config::Tiny' => '2.20',
+    'Config::Tiny' => '2.22',
     'Date::Format' => '2.24',
     'Dist::Zilla' => '4.300033',
     'Dist::Zilla::Plugin::AbstractFromPOD' => 'v0.2.0',
@@ -30,16 +30,13 @@ my $prereqs  = {
     'Dist::Zilla::Plugin::ModuleBuild::Custom' => '4.16',
     'Dist::Zilla::Plugin::ReadmeAnyFromPod' => '0.141760',
     'Dist::Zilla::Plugin::Signature' => '1.100930',
+    'Dist::Zilla::Plugin::Test::ReportMetadata' => 'v0.2.0',
     'Dist::Zilla::Plugin::VersionFromModule' => '0.08',
-    'File::DataClass' => 'v0.62.0',
+    'File::DataClass' => 'v0.63.0',
     'File::ShareDir' => '1.102',
     'HTTP::Message' => '6.06',
     'LWP' => '6.08',
     'LWP::Protocol::https' => '6.03',
-    'Module::Install' => '1.12',
-    'Module::Install::AutoLicense' => '0.08',
-    'Module::Install::ReadmeFromPod' => '0.20',
-    'Module::Install::ReadmeMarkdownFromPod' => '0.03',
     'Module::Metadata' => '1.000011',
     'Moo' => '2.000001',
     'Perl::Version' => '1.013',
@@ -51,8 +48,13 @@ my $prereqs  = {
     'Type::Tiny' => '1.000004',
     'Unexpected' => 'v0.38.0',
     'local::lib' => '2.000014',
-    'namespace::autoclean' => '0.22',
+    'namespace::autoclean' => '0.26',
     'perl' => '5.010001'
+  },
+  'test_requires' => {
+    'File::Spec' => '0',
+    'Module::Metadata' => '1.000011',
+    'Sys::Hostname' => '0'
   },
 };
 my $testing  = sub { $ENV{AUTOMATED_TESTING}
