@@ -30,7 +30,6 @@ share/Build.PL
 share/Changes
 share/DZ_Build.PL
 share/MANIFEST.SKIP
-share/MI_Makefile.PL
 share/boilerplate.pm
 share/data_dumper.pm
 share/dist.ini
@@ -40,7 +39,8 @@ share/gitpre-commit
 share/perl_localenv
 share/perl_module.pm
 share/perl_program.pl
-t/01always_pass.t
+t/00report-metadata.dd
+t/00report-metadata.t
 t/02pod.t
 t/03podcoverage.t
 t/05kwalitee.t
