@@ -3,11 +3,11 @@ name = Module-Provision
 [Prereqs]
 perl                  = 5.010001
 local::lib            = 2.000014
-namespace::autoclean  = 0.22
+namespace::autoclean  = 0.26
 Class::Null           = 2.101420
 Class::Usul           = v0.63.0
-Config::Tiny          = 2.20
-CPAN::Meta            = 2.142690
+Config::Tiny          = 2.22
+CPAN::Meta            = 2.150005
 CPAN::Uploader        = 0.103004
 Date::Format          = 2.24
 Dist::Zilla           = 4.300033
@@ -18,16 +18,13 @@ Dist::Zilla::Plugin::Meta::Dynamic::Config = 0.04
 Dist::Zilla::Plugin::ModuleBuild::Custom   = 4.16
 Dist::Zilla::Plugin::ReadmeAnyFromPod      = 0.141760
 Dist::Zilla::Plugin::Signature             = 1.100930
+Dist::Zilla::Plugin::Test::ReportMetadata  = v0.2.0
 Dist::Zilla::Plugin::VersionFromModule     = 0.08
-File::DataClass       = v0.62.0
+File::DataClass       = v0.63.0
 File::ShareDir        = 1.102
 HTTP::Message         = 6.06
 LWP::Protocol::https  = 6.03
 LWP                   = 6.08
-Module::Install       = 1.12
-Module::Install::AutoLicense           = 0.08
-Module::Install::ReadmeFromPod         = 0.20
-Module::Install::ReadmeMarkdownFromPod = 0.03
 Module::Metadata      = 1.000011
 Moo                   = 2.000001
 Perl::Version         = 1.013
@@ -60,6 +57,9 @@ directory         = t
 inherit_version   = 0
 meta_noindex      = 1
 
+; Switch to using this meta provider when build slows due to dist size
+; Remove xxx prefix to add M::P as an author dependency
+; xxx_authordep Module::Provision
 ;[MetaProvides::FromFile]
 ;inherit_version   = 0
 ;file              = some_file.ini
@@ -104,6 +104,7 @@ exclude_filename  = cpanfile
 [MetaYAML]
 [ManifestInRoot]
 [ManifestSkip]
+[Test::ReportMetadata]
 
 ; Local Variables:
 ; mode: conf-windows
