@@ -30,21 +30,21 @@ license           = http://dev.perl.org/licenses/
 homepage          = https://metacpan.org/author/[% author_ID %]
 bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=[% distname %]
 bugtracker.mailto = bug-[% distname %]@rt.cpan.org
-;repository.url   = git://github.com/[% author_id %]/p5-[% lc_distname %].git
-;repository.web   = http://github.com/[% author_id %]/p5-[% lc_distname %]
-;repository.type  = git
+repository.url    = git://github.com/[% author_id %]/p5-[% lc_distname %].git
+repository.web    = http://github.com/[% author_id %]/p5-[% lc_distname %]
+repository.type   = git
 
-;[ReadmeAnyFromPod / ReadmeMarkdownInRoot]
-;filename         = README.md
-;location         = root
-;type             = markdown
+[ReadmeAnyFromPod / ReadmeMarkdownInRoot]
+filename          = README.md
+location          = root
+type              = markdown
 
-;[Run::BeforeBuild]
-;run              = cp .build.PL Build.PL
+[Run::BeforeBuild]
+run               = cp .build.PL Build.PL
 
-;[CopyFilesFromBuild]
-;copy             = Build.PL
-;move             = cpanfile
+[CopyFilesFromBuild]
+copy              = Build.PL
+move              = cpanfile
 
 [GatherDir]
 exclude_filename  = cpanfile
@@ -57,11 +57,13 @@ exclude_filename  = cpanfile
 [VersionFromModule]
 [ModuleBuild::Custom]
 [License]
+[CPANFile]
 [MetaConfig]
 [MetaJSON]
 [MetaYAML]
 [ManifestInRoot]
 [ManifestSkip]
+[Test::ReportMetadata]
 
 ; Local Variables:
 ; mode: conf-windows
