@@ -1,5 +1,8 @@
 Revision history for Module::Provision
 
+          - Dropped support for Module::Install
+          - Added Test::ReportMetaData to dist.ini and share/dist.ini
+          - Deleted t/01always_pass.t
           - Added localdir config attr for M:P:TF:Debian
 
 0.40.1    2015-06-08 22:46:08
